--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
     "better-scroll": "^0.4.0",
+    "create-keyframe-animation": "^0.1.0",
+    "good-storage": "^1.0.1",
+    "js-base64": "^2.4.9",
     "fastclick": "^1.0.6",
     "jsonp": "^0.2.1",
+    "lodash": "^4.17.10",
+    "lyric-parser": "^1.0.1",
     "vue": "^2.5.2",
     "vue-lazyload": "^1.2.6",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
